<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25sp"
    android:layout_marginHorizontal="25sp"
    android:gravity="center"
    tools:context=".ui.main.VotingRulesFrag1">

    <TextView
        android:id="@+id/importance_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/importance_header"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/importance_info"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/importance_info" />

    <TextView
        android:id="@+id/rules_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_header"
        android:layout_marginTop="30sp"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/rules_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/rules_info" />

    <Button
        android:id="@+id/check_eligibility"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:text="@string/check_registration" />

    <Button
        android:id="@+id/register_to_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:text="@string/register_to_vote" />

    <TextView
        android:id="@+id/rules_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_cont"
        android:textSize="18sp"
        android:layout_margin="10sp"/>

    <Button
        android:id="@+id/find_my_deadlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:textSize="20sp"
        android:text="@string/find_my_deadlines"
        />


</LinearLayout>
</ScrollView>
