<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/streetField"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <EditText
        android:id="@+id/streetField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/toFMReps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <EditText
        android:id="@+id/zipField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/zipCode"
        app:layout_constraintBottom_toTopOf="@+id/toFMReps"
        app:layout_constraintEnd_toEndOf="@+id/stateField"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/stateField"
        app:layout_constraintTop_toBottomOf="@+id/stateField"
        app:layout_constraintVertical_bias="0.352" />

    <Button
        android:id="@+id/toFMReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toFMReps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <Button
        android:id="@+id/toLeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/toLeg"
        app:layout_constraintBottom_toTopOf="@+id/toVote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toFMReps"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/toVote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toVote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toFMReps"
        app:layout_constraintVertical_bias="0.668" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streetLabel"
        app:layout_constraintBottom_toBottomOf="@+id/streetField"
        app:layout_constraintEnd_toStartOf="@+id/streetField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/streetField" />

    <EditText
        android:id="@+id/cityField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/City"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/toFMReps"
        app:layout_constraintEnd_toEndOf="@+id/streetField"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/streetField"
        app:layout_constraintTop_toBottomOf="@+id/streetField"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/cityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City"
        app:layout_constraintBottom_toBottomOf="@+id/cityField"
        app:layout_constraintEnd_toStartOf="@+id/cityField"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cityField"
        app:layout_constraintVertical_bias="0.483" />

    <EditText
        android:id="@+id/stateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cityField"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cityField"
        app:layout_constraintTop_toBottomOf="@+id/cityField"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        app:layout_constraintBottom_toBottomOf="@+id/stateField"
        app:layout_constraintEnd_toStartOf="@+id/stateField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stateField" />

    <TextView
        android:id="@+id/zipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zipCode"
        app:layout_constraintBottom_toBottomOf="@+id/zipField"
        app:layout_constraintEnd_toStartOf="@+id/zipField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/zipField" />


</androidx.constraintlayout.widget.ConstraintLayout>